printing one title to DOM

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 
 
     </body>
+    <script type="text/javascript" src="jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="blogObject.js"></script>
+
+    <script type="text/javascript" src="blogArticles.js"></script>
 
     <script type="text/javascript" src="blog.js"></script>
-    <script type="text/javascript" src="blogArticles.js"> </script>
-    <script type="text/javascript" src="jquery-2.1.4.min.js"></script>
 </html>
