--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title> Jakes Blog</title>
         <meta charset="utf-8"></meta>
+        <link rel="stylesheet" type="text/css" href="blog.css"></link>
     </head>
 
     <body>
@@ -28,5 +29,5 @@
       <script type="text/javascript" src="blogObject.js"></script>
       <script type="text/javascript" src="blogArticles.js"></script>
       <script type="text/javascript" src="blog.js"></script>
-      
+
 </html>
