added buttons to each article to expand. Known bugs: bnon-first buttons wont' fire, need to shrink articles so that they can be expanded

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     </head>
 
     <body>
+      <section id="navBarWrapper">
+        <header id="navBarHeader">
+          <nav id="navBar">
+            <a>Home</a>
+            <a>About</a>
+            <a href="https://github.com/jakeherold/blog" id="aboutNav">Github Repo</a>
+          </nav>
+        </header>
+      </section>
+
       <section id="articleWrapper">
         <article class="articlePlaceholder">
           <header>
@@ -18,7 +28,8 @@
                   </time>
                 </div>
           </header>
-            <section class="articleContent"></section>
+          <section class="articleContent"></section>
+          <br><button class="expandArticleText"> -> Expand Article </button><br>
         </article>
       </section>
 
