have dropdown menus now, but don't do anything

--- a/index.html
+++ b/index.html
@@ -18,6 +18,24 @@
         </header>
       </section>
 
+      <section>
+        <section class="authorDropDownWrapper">
+          <form action="action_page.php">
+            <select name="authorsDropDown" id="authorDropDownAnchor">
+              <option value="authorPlaceholder">Sort By Author</option>
+            </select>
+          </form>
+        </section>
+
+        <section class="categoryDropDownWrapper">
+          <form action="action_page.php">
+            <select name="categoryDropDown" id="categoryDropDownAnchor">
+              <option value="categoryPlaceholder">Sort By Category</option>
+            </select>
+          </form>
+        </section>
+      </section>
+      
       <section id="articleWrapper">
         <article class="articlePlaceholder">
           <header>
