--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </form>
         </section>
       </section>
-      
+
       <section id="articleWrapper">
         <article class="articlePlaceholder">
           <header>
@@ -47,7 +47,9 @@
                 </div>
           </header>
           <section class="articleContent"></section>
-          <br><button class="expandArticleText"> -> Expand Article </button><br>
+
+
+          <section class="buttonAnchor"></section><!-- <br><button class="expandArticleText"> -> Expand Article </button><br> -->
         </article>
       </section>
 
