--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
       <section id="articleWrapper">
         <article class="articlePlaceholder">
           <header>
+            <section class="categoryAnchor" style="display:none"></section>
+
             <h1></h1>
               <p class="authorSpot"></p>
                 <div class="publishDate">
@@ -51,10 +53,13 @@
                   </time>
                 </div>
           </header>
+
           <section class="articleContent"></section>
 
 
-          <section class="buttonAnchor"></section><!-- <br><button class="expandArticleText"> -> Expand Article </button><br> -->
+          <section class="buttonAnchor"></section>
+
+
         </article>
       </section>
 
