--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <section id="navBarWrapper">
         <header id="navBarHeader">
           <nav id="navBar">
-            <a>Home</a>
+            <a id="homeNavElement">Home</a>
             <a id="aboutNavElement">About</a>
             <a href="https://github.com/jakeherold/blog" id="aboutNav">Github Repo</a>
           </nav>
