forgot to make//switch branch before edits. This commit is functionally day3's first.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <title> Jakes Blog</title>
         <meta charset="utf-8"></meta>
         <link rel="stylesheet" type="text/css" href="blog.css"></link>
+        <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
     </head>
 
-    <body>
+    <body >
       <section id="navBarWrapper">
+        <h1 id="blogName">Adventures with Lumberjake</h1>
         <header id="navBarHeader">
           <nav id="navBar">
             <a id="homeNavElement">Home</a>
@@ -20,7 +22,7 @@
 
       <div id="aboutDiv">
         <h1>About the Developer</h1>
-        <p>Jake Herold is a bearded portland hipster with good taste in music, cigars, and whisky. He hates IPAs. Why would you even think those are an ok thing for humans to make? </p>
+        <p>Jake Herold is a bearded portland hipster with good taste in music, cigars, and whisky. He hates IPAs. Why would you even that bitter swill is an ok thing for humans to make? </p>
       </div>
 
 
@@ -62,7 +64,6 @@
 
         </article>
       </section>
-
 
     </body>
 
