added shrink function

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
           <section class="articleContent"></section>
 
-
-          <section class="buttonAnchor"></section>
+          <!-- This part below is, admittedly, difficult to find. Checkout the printArticle Prototype for when we append the paragraph that acts like a button.-->
+          <section class="buttonThatsNotAButton"></section>
 
 
         </article>
