--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     </body>
 
       <script type="text/javascript" src="jquery-2.1.4.min.js"></script>
+      <script src="handlebars-v4.0.5.js"></script>
       <script type="text/javascript" src="blogObject.js"></script>
       <script type="text/javascript" src="blogArticles.js"></script>
       <script type="text/javascript" src="util.js"></script>
