--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
 
     <body >
+
       <script id="articleTemplate" type="text/x-handlebars-template">
 
       <div class="realArticle">
@@ -44,7 +45,7 @@
 
       <div id="aboutDiv">
         <h1>About the Developer</h1>
-        <p>Jake Herold is a bearded portland hipster with good taste in music, cigars, and whisky. He hates IPAs. Why would you even that bitter swill is an ok thing for humans to make? </p>
+        <p>Jake Herold is a bearded portland hipster with good taste in music, cigars, and whisky. He hates IPAs. Why would you make bitter swill thats clearly designed to poison your fellow man? </p>
       </div>
 
 
