reinstated filter by author and category functions

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="realArticle">
         <header>
           <h1>{{{title}}}</h1>
-          <p>{{category}}</p>
+          <p class="articleCategory">{{category}}</p>
           <p class="authorSpot" href="{{{authorUrl}}}">{{{author}}}</p>
            <div class="publishDate">{{{publishedOn}}}</div>
         </header>
