--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <DOCTYPE! html>
 
-<html>
-    <head>
-        <title> Jakes Blog</title>
-        <meta charset="utf-8"></meta>
-        <link rel="stylesheet" type="text/css" href="blog.css"></link>
-        <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
-    </head>
+  <html>
 
-    <body >
+  <head>
+    <title> Jakes Blog</title>
+    <meta charset="utf-8"></meta>
+    <link rel="stylesheet" type="text/css" href="blog.css"></link>
+    <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+  </head>
 
-      <script id="articleTemplate" type="text/x-handlebars-template">
+  <body>
+
+    <script id="articleTemplate" type="text/x-handlebars-template">
 
       <div class="realArticle">
         <header>
           <h1>{{{title}}}</h1>
           <p class="articleCategory">{{category}}</p>
           <p class="authorSpot" href="{{{authorUrl}}}">{{{author}}}</p>
-           <div class="publishDate">{{{publishedOn}}}</div>
+          <div class="publishDate">{{{publishedOn}}}</div>
         </header>
 
 
@@ -25,56 +26,58 @@
 
         <!-- This part below is, admittedly, difficult to find. Checkout the printArticle Prototype for when we append the paragraph that acts like a button.-->
         <p class="expandArticleText"> read more.... </p>
-        <p class="contractArticleText" style="display:none;" > read less.... </p>
+        <p class="contractArticleText" style="display:none;"> read less.... </p>
       </div>
 
     </script>
 
 
 
-      <section id="navBarWrapper">
-        <h1 id="blogName">Adventures with Lumberjake</h1>
-        <header id="navBarHeader">
-          <nav id="navBar">
-            <a class="navItem" id="homeNavElement">Home</a>
-            <a class="navItem" id="aboutNavElement">About</a>
-            <a class="navItem" href="https://github.com/jakeherold/blog" id="gitNav">Github Repo</a>
-          </nav>
-        </header>
+    <section id="navBarWrapper">
+      <h1 id="blogName">Adventures with Lumberjake</h1>
+      <header id="navBarHeader">
+        <nav id="navBar">
+          <a class="navItem" id="homeNavElement">Home</a>
+          <a class="navItem" id="aboutNavElement">About</a>
+          <a class="navItem" href="https://github.com/jakeherold/blog" id="gitNav">Github Repo</a>
+        </nav>
+      </header>
+    </section>
+
+    <div id="aboutDiv">
+      <h1>About the Developer</h1>
+      <p>Jake Herold is a bearded portland hipster with good taste in music, cigars, and whisky. He hates IPAs. Why would you make bitter swill thats clearly designed to poison your fellow man? </p>
+    </div>
+
+
+
+    <div id="dropDownWrapper">
+      <div id="filterByWrapper">
+        <p>Filter by: </p>
+      </div>
+
+      <section class="dropdown" class="authorDropDownWrapper">
+        <select name="authorsDropDown" id="authorDropDownAnchor">
+          <option value="authorPlaceholder">Author</option>
+        </select>
       </section>
 
-      <div id="aboutDiv">
-        <h1>About the Developer</h1>
-        <p>Jake Herold is a bearded portland hipster with good taste in music, cigars, and whisky. He hates IPAs. Why would you make bitter swill thats clearly designed to poison your fellow man? </p>
-      </div>
+      <section class="dropdown" class="categoryDropDownWrapper">
+        <select name="categoryDropDown" id="categoryDropDownAnchor">
+          <option value="categoryPlaceholder"> Category</option>
+        </select>
+      </section>
+    </div>
 
+    <section id="articleWrapper"></section>
 
+  </body>
 
-      <div id="dropDownWrapper">
-        <div id="filterByWrapper"><p>Filter by: </p></div>
+  <script type="text/javascript" src="jquery-2.1.4.min.js"></script>
+  <script src="handlebars-v4.0.5.js"></script>
+  <script type="text/javascript" src="blogObject.js"></script>
+  <script type="text/javascript" src="blogArticles.js"></script>
+  <script type="text/javascript" src="util.js"></script>
+  <script type="text/javascript" src="blog.js"></script>
 
-        <section class="dropdown" class="authorDropDownWrapper">
-            <select name="authorsDropDown" id="authorDropDownAnchor">
-              <option value="authorPlaceholder">Author</option>
-            </select>
-        </section>
-
-        <section class="dropdown" class="categoryDropDownWrapper">
-            <select name="categoryDropDown" id="categoryDropDownAnchor">
-              <option value="categoryPlaceholder"> Category</option>
-            </select>
-        </section>
-      </div>
-
-      <section id="articleWrapper"></section>
-
-    </body>
-
-      <script type="text/javascript" src="jquery-2.1.4.min.js"></script>
-      <script src="handlebars-v4.0.5.js"></script>
-      <script type="text/javascript" src="blogObject.js"></script>
-      <script type="text/javascript" src="blogArticles.js"></script>
-      <script type="text/javascript" src="util.js"></script>
-      <script type="text/javascript" src="blog.js"></script>
-
-</html>
+  </html>
