tweaked id and classes for css

--- a/secret.html
+++ b/secret.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"></meta>
-  <title>LAB SHIT</title>
-  <link rel="stylesheet" href="css/main.css" type="text/css">
+  <title>LumberBlog</title>
+  <link rel="stylesheet" type="text/css" href="blog.css"></link>
+
 
 </head>
 
 <style>
-.divBlock {
+.textInOutDiv {
   display: inline-block;
   vertical-align: top;
   width: 47%;
@@ -29,13 +30,17 @@
 
 <body>
 
-<script src="js/highlight.js"></script>
+<script src="highlight.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
 <h1>Markdown Demo</h1>
 
+
+
+
+
 <!-- TITLE SHIT -->
-<div class="divBlock ">
+<div class="textInOutDiv ">
 <h2>TITLE</h2>
 <textarea rows="20" cols="60" id="textTitle" class="input pRaw">
 TITLEexampleTEXT
@@ -43,7 +48,7 @@ TITLEexampleTEXT
 </div>
 
 <!-- AUTHOR SHIT -->
-<div class="divBlock">
+<div class="textInOutDiv">
 <h2>AUTHOR</h2>
 <textarea rows="20" cols="60" id="textAuthor" class="input pRaw">
 AUTHORexampleTEXT
@@ -51,7 +56,7 @@ AUTHORexampleTEXT
 </div>
 
 <!-- URL SHIT -->
-<div class="divBlock">
+<div class="textInOutDiv">
 <h2>URL</h2>
 <textarea rows="20" cols="60" id="textUrl" class="input pRaw">
 URLexampleTEXT
@@ -59,7 +64,7 @@ URLexampleTEXT
 </div>
 
 <!-- CATEGORY SHIT -->
-<div class="divBlock">
+<div class="textInOutDiv">
 <h2>CATEGORY</h2>
 <textarea rows="20" cols="60" id="textCategory" class="input pRaw">
 CATEGORYexampleTEXT
@@ -67,7 +72,7 @@ CATEGORYexampleTEXT
 </div>
 
 <!-- BODY SHIT -->
-<div class="divBlock">
+<div class="textInOutDiv">
 <h2>Body</h2>
 <textarea rows="20" cols="60" id="textBody" class="input pRaw">
 BODYexampleTEXT
@@ -75,27 +80,47 @@ BODYexampleTEXT
 </div>
 
 
+<div class="textInOutDiv">
+  <h2>Article Demo</h2>
+  <h6>Live markdown output (read-only)</h6>
+  <p id="pMarkOut" class="input"></p>
+</div>
 
 
-
-<div class="divBlock">
+<div class="textInOutDiv">
   <h2>Live raw HTML output (read-only)</h2>
   <p id="liveRawHtmlOutput" class="input"></p>
 </div>
 
-<div class="divBlock">
-  <h2>Live markdown output (read-only)</h2>
-  <p id="pMarkOut" class="input"></p>
-</div>
-<div class="divBlock">
+
+<div class="textInOutDiv">
   <h2>JSON object (article body only)</h2>
   <p id="pJson" class="input"></p>
-</div>
 
+</div>
 
 
 
 <script id="articleTemplate" type="text/x-handlebars-template">
+
+  <div class="realArticle">
+    <header>
+      <h1>{{{title}}}</h1>
+      <p class="articleCategory">{{category}}</p>
+      <p class="authorSpot" href="{{{authorUrl}}}">{{{author}}}</p>
+      <div class="publishDate">{{{publishedOn}}}</div>
+    </header>
+
+
+    <section class="articleContent">{{{body}}}</section>
+
+    <!-- This part below is, admittedly, difficult to find. Checkout the printArticle Prototype for when we append the paragraph that acts like a button.-->
+    <p class="expandArticleText"> read more.... </p>
+    <p class="contractArticleText" style="display:none;"> read less.... </p>
+  </div>
+
+</script>
+<!-- <script id="articleTemplate" type="text/x-handlebars-template">
 
     <article class="arTemplate flex-container">
       <section id="content-header" class="article-header flex-container flex-item">
@@ -110,7 +135,7 @@ BODYexampleTEXT
       </section>
     </article>
 
-</script>
+</script> -->
 
 
 
