The remainging user input fields have been added and are live updating to markdown

--- a/secret.html
+++ b/secret.html
@@ -12,27 +12,59 @@
 <body>
 <h1>Input blog articles here, Jake!</h1>
 
+<!-- User Inputs Section Starts Here -->
 <div class="userInput">
-<h2>Input blog title!</h2>
+<h2>Input Title!</h2>
 <textarea rows="1" cols="60" id="userInputTitle" class="smallUserInput">
-Yukon Cornelius
+Yukon Cornelius, the man, the myth, the legend
+</textarea>
+</div>
+
+<div class="userInput">
+<h2>Input Category!</h2>
+<textarea rows="1" cols="60" id="userInputCategory" class="smallUserInput">
+Christmas characters
+</textarea>
+</div>
+
+<div class="userInput">
+<h2>Input Author!</h2>
+<textarea rows="1" cols="60" id="userInputAuthor" class="smallUserInput">
+Yukon Cornelius himself
+</textarea>
+</div>
+
+<div class="userInput">
+<h2>Input Author URL! </h2>
+<textarea rows="1" cols="60" id="userInputUrl" class="smallUserInput">
+http://christmas-specials.wikia.com/wiki/Yukon_Cornelius
+</textarea>
+</div>
+
+<div class="userInput">
+<h2>Input the date you want to show published on (YYYY-MM-DD)!</h2>
+<textarea rows="1" cols="60" id="userInputPublishedOn" class="smallUserInput">
+"2015-12-03"
 </textarea>
 </div>
 
 <div class="userInput">
 <h2>Input blog article body in raw markdown.</h2>
 <textarea rows="10" cols="20" id="userInputBody" class="pCommon pRaw">
-Yukon Cornelius was a great man
+<p>Yukon Cornelius was a great man</p><p>He helped Rudolph and the abominable snowman</p>
 </textarea>
 </div>
 
+
+
+<!-- Output Divs Section Starts Here -->
 <div class="divBlock">
   <h2>Live markdown output (read-only)</h2>
   <p id="pMarkdownOutput" class="pCommon"></p>
 </div>
 
 <div class="divBlock">
-  <h2>Live raw HTML output (read-only)</h2>
+  <h2>Live HTML output (read-only)</h2>
   <p id="pRawHtmlOutput" class="pCommon"></p>
 </div>
 ​
