--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
   <head>
     <title> Jakes Blog</title>
-    <meta charset="utf-8"></meta>
-    <link rel="stylesheet" type="text/css" href="blog.css"></link>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="blog.css">
     <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
   </head>
 
