--- a/secret.html
+++ b/secret.html
@@ -3,7 +3,7 @@
 <head>
   <title>Jakes Secret Markdown Page</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" type="text/css" href="blog.css"> -->
+  <link rel="stylesheet" type="text/css" href="blog.css">
 
 <link rel="stylesheet" type="text/css" href="secret.css">
 
@@ -18,50 +18,50 @@
 
   <div class="userInput">
   <h2>Input Title!</h2>
-  <textarea rows="1" cols="60" id="userInputTitle" class="smallUserInput">
+  <textarea rows="0" cols="60" id="userInputTitle" class="smallUserInput">
   Yukon Cornelius, the man, the myth, the legend
   </textarea>
   </div>
 
   <div class="userInput">
   <h2>Input Category!</h2>
-  <textarea rows="1" cols="60" id="userInputCategory" class="smallUserInput">
+  <textarea rows="0" cols="60" id="userInputCategory" class="smallUserInput">
   Christmas characters
   </textarea>
   </div>
 
   <div class="userInput">
   <h2>Input Author!</h2>
-  <textarea rows="1" cols="60" id="userInputAuthor" class="smallUserInput">
+  <textarea rows="0" cols="60" id="userInputAuthor" class="smallUserInput">
   Yukon Cornelius himself
   </textarea>
   </div>
 
   <div class="userInput">
   <h2>Input Author URL! </h2>
-  <textarea rows="1" cols="60" id="userInputUrl" class="smallUserInput">
+  <textarea rows="0" cols="60" id="userInputUrl" class="smallUserInput">
   http://christmas-specials.wikia.com/wiki/Yukon_Cornelius
   </textarea>
   </div>
 
   <div class="userInput">
   <h2>Input the date you want to show published on (YYYY-MM-DD)!</h2>
-  <textarea rows="1" cols="60" id="userInputPublishedOn" class="smallUserInput">
-  "2015-12-03"
+  <textarea rows="0" cols="60" id="userInputPublishedOn" class="smallUserInput">
+  2015-12-03
   </textarea>
   </div>
 
   <div class="userInput">
   <h2>Input blog article body in raw markdown.</h2>
   <textarea rows="20" cols="60" id="userInputBody" class="pCommon pRaw">
-  <p>Yukon Cornelius was a great man</p><p>He helped Rudolph and the abominable snowman</p>
+  <p style="color:red">Yukon Cornelius was a great man</p><p>He helped Rudolph and the abominable snowman</p>
   </textarea>
   </div>
 </div>
 
 
 <!-- Output Divs Section Starts Here -->
-<div class="outputContainerDiv">
+<div class="outputDivContainer">
   <div class="outputDiv">
     <h2>Live markdown output (read-only)</h2>
     <p id="pMarkdownOutput" class="pCommon"></p>
