--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
     <section id="navBarWrapper">
-      <h1 id="blogName">Adventures with Lumberjake</h1>
+      <a href="secret.html"><h1 id="blogName" >Adventures with Lumberjake</h1></a>
       <header id="navBarHeader">
         <nav id="navBar">
           <a class="navItem" id="homeNavElement">Home</a>
