--- a/index.html
+++ b/index.html
@@ -3,35 +3,13 @@
   <html>
 
   <head>
-      <title> Jakes Blog</title>
+      <title> LumberBlog</title>
     <meta charset="utf-8"></meta>
     <link rel="stylesheet" type="text/css" href="blog.css"></link>
     <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
-
-    <script id="articleTemplate" type="text/x-handlebars-template">
-
-      <div class="realArticle">
-        <header>
-          <h1>{{{title}}}</h1>
-          <p class="articleCategory">{{category}}</p>
-          <p class="authorSpot" href="{{{authorUrl}}}">{{{author}}}</p>
-          <div class="publishDate">{{{publishedOn}}}</div>
-        </header>
-
-
-        <section class="articleContent">{{{body}}}</section>
-
-        <!-- This part below is, admittedly, difficult to find. Checkout the printArticle Prototype for when we append the paragraph that acts like a button.-->
-        <p class="expandArticleText"> read more.... </p>
-        <p class="contractArticleText" style="display:none;"> read less.... </p>
-      </div>
-
-    </script>
-
-
 
     <section id="navBarWrapper">
       <a href="secret.html"><h1 id="blogName" >Adventures with Lumberjake</h1></a>
