--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
 
   <script type="text/javascript" src="jquery-2.1.4.min.js"></script>
   <script src="handlebars-v4.0.5.js"></script>
+  <script type="text/javascript" src="marked.min.js"></script>
   <script type="text/javascript" src="blogObject.js"></script>
-  <script type="text/javascript" src="blogArticles.js"></script>
+
+  <!-- <script type="text/javascript" src="blogArticles.js"></script> -->
   <script type="text/javascript" src="util.js"></script>
   <script type="text/javascript" src="blog.js"></script>
 
