prints ready objects to console, but won't print to DOM

--- a/template.html
+++ b/template.html
@@ -1,4 +1,3 @@
-<!-- <script id="articleTemplate" type="text/x-handlebars-template"> -->
 
   <div class="realArticle">
     <header>
@@ -9,7 +8,7 @@
     </header>
 
 
-    <section class="articleContent">{{{body}}}</section><br>
+    <section class="articleContent">{{{markown}}}</section><br>
 
 
     <p class="expandArticleText"> read more.... </p>
