prints articles and logs etag

--- a/template.html
+++ b/template.html
@@ -8,7 +8,7 @@
     </header>
 
 
-    <section class="articleContent">{{{markown}}}</section><br>
+    <section class="articleContent">{{{body}}}</section><br>
 
 
     <p class="expandArticleText"> read more.... </p>
