beautified and simplified as much as possible

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <html>
 
   <head>
-      <title> LumberBlog</title>
+    <title> LumberBlog</title>
     <meta charset="utf-8"></meta>
     <link rel="stylesheet" type="text/css" href="blog.css"></link>
     <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
@@ -12,7 +12,9 @@
   <body>
 
     <section id="navBarWrapper">
-      <a href="secret.html"><h1 id="blogName" >Adventures with Lumberjake</h1></a>
+      <a href="secret.html">
+        <h1 id="blogName">Adventures with Lumberjake</h1>
+      </a>
       <header id="navBarHeader">
         <nav id="navBar">
           <a class="navItem" id="homeNavElement">Home</a>
