--- a/stats.html
+++ b/stats.html
@@ -1,1 +1,24 @@
-stats
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+
+    <title></title>
+  </head>
+  <body>
+    <h1>Sweet Stats</h1>
+    <p></p>
+    <p></p>
+
+
+
+
+
+
+  </body>
+  <script type="text/javascript" src="jquery-2.1.4.min.js"></script>
+  <script src="handlebars-v4.0.5.js"></script>
+  <script type="text/javascript" src="marked.min.js"></script>
+  <!-- <script type="text/javascript" src="blog.js"></script> -->
+  <script type="text/javascript" src="stats.js"></script>
+</html>
