--- a/scratchSpace.html
+++ b/scratchSpace.html
@@ -14,11 +14,11 @@
     <p>Each author's word length</p>
     <p></p>
 
-  
+
   </body>
   <script type="text/javascript" src="jquery-2.1.4.min.js"></script>
   <script src="handlebars-v4.0.5.js"></script>
   <script type="text/javascript" src="marked.min.js"></script>
   <!-- <script type="text/javascript" src="blog.js"></script> -->
-  <script type="text/javascript" src="stats.js"></script>
+  <script type="text/javascript" src="scratchSpace.js"></script>
 </html>
