fixed highlight.js issues

--- a/secret.html
+++ b/secret.html
@@ -5,11 +5,13 @@
   <meta charset="utf-8"></meta>
   <title>LumberBlog</title>
   <link rel="stylesheet" type="text/css" href="secret2.css"></link>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css">
+
 </head>
 
 <body>
 
-  <script src="highlight.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js"></script>
   <script>
     hljs.initHighlightingOnLoad();
   </script>
@@ -30,48 +32,36 @@
     <!-- TITLE THINGS -->
     <div class="userInput ">
       <h3 class="inputHeader">TITLE</h3>
-      <textarea rows="2" cols="60" id="textTitle" class="input pRaw">
-        Why My Article is Rad
-      </textarea>
+      <textarea rows="2" cols="60" id="textTitle" class="input pRaw">Why My Article is Rad</textarea>
     </div>
 
     <!-- AUTHOR THINGS -->
     <div class="userInput">
       <h3 class="inputHeader">AUTHOR</h3>
-      <textarea rows="2" cols="60" id="textAuthor" class="input pRaw">
-        J. Herold
-      </textarea>
+      <textarea rows="2" cols="60" id="textAuthor" class="input pRaw">J. Herold</textarea>
     </div>
 
     <!-- URL THINGS -->
     <div class="userInput">
       <h3 class="inputHeader">URL</h3>
-      <textarea rows="2" cols="60" id="textUrl" class="input pRaw">
-        jakeherold.github.io/gitSquared
-      </textarea>
+      <textarea rows="2" cols="60" id="textUrl" class="input pRaw">jakeherold.github.io/gitSquared</textarea>
     </div>
 
     <!-- CATEGORY THINGS -->
     <div class="userInput">
       <h3 class="inputHeader">CATEGORY</h3>
-      <textarea rows="2" cols="60" id="textCategory" class="input pRaw">
-        Code
-      </textarea>
+      <textarea rows="2" cols="60" id="textCategory" class="input pRaw">Code</textarea>
     </div>
 
     <div class="userInput">
       <h3 class="inputHeader">Date</h3>
-      <textarea rows="0" cols="60" id="textDate" class="input">
-        2015-12-03
-      </textarea>
+      <textarea rows="0" cols="60" id="textDate" class="input">2015-12-03</textarea>
     </div>
 
     <!-- BODY THINGS -->
     <div class="userInput">
       <h3 class="inputHeader">Body</h3>
-      <textarea rows="20" cols="60" id="textBody" class="input pRaw">
-        Sample text that is a brilliant article.
-      </textarea>
+      <textarea rows="20" cols="60" id="textBody" class="input pRaw">Sample text that is a brilliant article.</textarea>
     </div>
   </div>
   <!-- ends user input wrapper-->
