--- a/stats.html
+++ b/stats.html
@@ -7,14 +7,15 @@
   </head>
   <body>
     <h1>Sweet Stats</h1>
-    <p>Article Number: </p>
-    <p>Word Count</p>
-    <p>Ave. Word Length</p>
-    <p>Unique authors</p>
-    <p>Each author's word length</p>
+    <p>Article Number: </p><div id="numberArticles"></div>
+    <p>Word Count:</p><div id="wordCount"></div>
+    <p>Average Words Per Article:</p><div id="averageWordsPerArticle"></div>
+    <p>Ave. Word Length</p><div id="anchor3"></div>
+    <p>Unique authors</p><div id="uniqueAuthors"></div>
+    <p>Each author's word length</p><div id="anchor5"></div>
     <p></p>
 
-  
+
   </body>
   <script type="text/javascript" src="jquery-2.1.4.min.js"></script>
   <script src="handlebars-v4.0.5.js"></script>
