got it to figure out number of letters per word

--- a/stats.html
+++ b/stats.html
@@ -10,7 +10,7 @@
     <p>Article Number: </p><div id="numberArticles"></div>
     <p>Word Count:</p><div id="wordCount"></div>
     <p>Average Words Per Article:</p><div id="averageWordsPerArticle"></div>
-    <p>Ave. Word Length</p><div id="anchor3"></div>
+    <p>Ave. Word Length</p><div id="avgWordLength"></div>
     <p>Unique authors</p><div id="uniqueAuthors"></div>
     <p>Each author's word length</p><div id="anchor5"></div>
     <p></p>
