forgot to change a variable name everywhere. Saved it

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <script src="handlebars-v4.0.5.js"></script>
   <script type="text/javascript" src="marked.min.js"></script>
   <script type="text/javascript" src="blogObject.js"></script>
-
+  <script type="text/javascript" src="stats.js"></script>
   <!-- <script type="text/javascript" src="blogArticles.js"></script> -->
   <script type="text/javascript" src="util.js"></script>
   <script type="text/javascript" src="blog.js"></script>
