got it to print a table with undefined data

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
   <script type="text/javascript" src="jquery-2.1.4.min.js"></script>
   <script src="handlebars-v4.0.5.js"></script>
   <script type="text/javascript" src="marked.min.js"></script>
+  <script type="text/javascript" src="html5sql.js"></script>
+
+  <script type="text/javascript" src="webdb.js"></script>
   <script type="text/javascript" src="blogObject.js"></script>
   <script type="text/javascript" src="stats.js"></script>
   <!-- <script type="text/javascript" src="blogArticles.js"></script> -->
