--- a/stats.html
+++ b/stats.html
@@ -12,7 +12,7 @@
     <p>Average Words Per Article:</p><div id="averageWordsPerArticle"></div>
     <p>Ave. Word Length</p><div id="avgWordLength"></div>
     <p>Unique authors</p><div id="uniqueAuthors"></div>
-    <p>Each author's word length</p><div id="authorWordLengths"></div>
+    <p>Each author's words per article</p><div id="authorWordsPerArticle"></div>
     <p></p>
 
 
