finally prints words per author

--- a/stats.html
+++ b/stats.html
@@ -13,7 +13,9 @@
     <p>Ave. Word Length</p><div id="avgWordLength"></div>
     <p>Unique authors</p><div id="uniqueAuthors"></div>
     <p>Each author's words per article</p><div id="authorWordsPerArticle"></div>
-    <p></p>
+    <table id="tableAnchor">
+      <tr><th>Author</th><th>Word Count</th></tr>
+    </table>
 
 
   </body>
