--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <title> LumberBlog</title>
     <meta charset="utf-8"></meta>
-    <link rel="stylesheet" type="text/css" href="blog.css"></link>
+    <link rel="stylesheet" type="text/css" href="/blog.css"></link>
     <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
   </head>
 
@@ -53,16 +53,16 @@
 
   </body>
 
-  <script type="text/javascript" src="jquery-2.1.4.min.js"></script>
+  <script type="text/javascript" src="/jquery-2.1.4.min.js"></script>
   <script src="handlebars-v4.0.5.js"></script>
-  <script type="text/javascript" src="marked.min.js"></script>
-  <script type="text/javascript" src="html5sql.js"></script>
-
-  <script type="text/javascript" src="webdb.js"></script>
-  <script type="text/javascript" src="blogObject.js"></script>
-  <script type="text/javascript" src="stats.js"></script>
-  <!-- <script type="text/javascript" src="blogArticles.js"></script> -->
-  <script type="text/javascript" src="util.js"></script>
-  <script type="text/javascript" src="blog.js"></script>
+  <script type="text/javascript" src="/marked.min.js"></script>
+  <script type="text/javascript" src="/html5sql.js"></script>
+  <script type="text/javascript" src="/js/pages.js"></script>
+  <script type="text/javascript" src="/webdb.js"></script>
+  <script type="text/javascript" src="/js/router.js"></script>
+  <script type="text/javascript" src="/blogObject.js"></script>
+  <script type="text/javascript" src="/stats.js"></script>
+  <script type="text/javascript" src="/util.js"></script>
+  <script type="text/javascript" src="/blog.js"></script>
 
   </html>
