thorooughly broken. use day 8 last commit instead. new branch opening for this commit more than anything useful

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
   <script type="text/javascript" src="/html5sql.js"></script>
   <script type="text/javascript" src="/js/pages.js"></script>
   <script type="text/javascript" src="/webdb.js"></script>
+  <script type="text/javascript" src="/js/articleControler.js"></script>
+  <script type="text/javascript" src="/js/aboutControler.js"></script>
   <script type="text/javascript" src="/js/router.js"></script>
   <script type="text/javascript" src="/blogObject.js"></script>
   <script type="text/javascript" src="/stats.js"></script>
