--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header id="navBarHeader">
         <nav id="navBar">
           <a class="navItem" id="homeNavElement">Home</a>
-          <a class="navItem" id="aboutNavElement">About</a>
+          <a class="navItem" id="aboutNavElement" href="about">About</a>
           <a class="navItem" href="https://github.com/jakeherold/blog" id="gitNav">Github Repo</a>
         </nav>
       </header>
@@ -57,8 +57,10 @@
   <script src="handlebars-v4.0.5.js"></script>
   <script type="text/javascript" src="/marked.min.js"></script>
   <script type="text/javascript" src="/html5sql.js"></script>
-  <script type="text/javascript" src="/js/pages.js"></script>
+  <script type="text/javascript" src="/js/page.js"></script>
   <script type="text/javascript" src="/webdb.js"></script>
+  <script type="text/javascript" src="/js/router.js"></script>
+
   <script type="text/javascript" src="/js/articleControler.js"></script>
   <script type="text/javascript" src="/js/aboutControler.js"></script>
   <script type="text/javascript" src="/js/router.js"></script>
