got page.js stuff working right. still need to truncate and dropdown

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </a>
       <header id="navBarHeader">
         <nav id="navBar">
-          <a class="navItem" id="homeNavElement">Home</a>
+          <a class="navItem" id="homeNavElement" href="home">Home</a>
           <a class="navItem" id="aboutNavElement" href="about">About</a>
           <a class="navItem" href="https://github.com/jakeherold/blog" id="gitNav">Github Repo</a>
         </nav>
