moved files around. re-commit for safety

--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
 
   </body>
 
-  <script type="text/javascript" src="/jquery-2.1.4.min.js"></script>
-  <script src="handlebars-v4.0.5.js"></script>
-  <script type="text/javascript" src="/marked.min.js"></script>
-  <script type="text/javascript" src="/html5sql.js"></script>
+  <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+  <script src="/js/handlebars-v4.0.5.js"></script>
+  <script type="text/javascript" src="/js/marked.min.js"></script>
+  <script type="text/javascript" src="/js/html5sql.js"></script>
   <script type="text/javascript" src="/js/page.js"></script>
-  <script type="text/javascript" src="/webdb.js"></script>
+  <script type="text/javascript" src="/js/webdb.js"></script>
   <script type="text/javascript" src="/js/router.js"></script>
 
   <script type="text/javascript" src="/js/articleControler.js"></script>
   <script type="text/javascript" src="/js/aboutControler.js"></script>
   <script type="text/javascript" src="/js/router.js"></script>
-  <script type="text/javascript" src="/blogObject.js"></script>
-  <script type="text/javascript" src="/stats.js"></script>
-  <script type="text/javascript" src="/util.js"></script>
-  <script type="text/javascript" src="/blog.js"></script>
+  <script type="text/javascript" src="/js/blogObject.js"></script>
+  <script type="text/javascript" src="/js/stats.js"></script>
+  <script type="text/javascript" src="/js/util.js"></script>
+  <script type="text/javascript" src="/js/blog.js"></script>
 
   </html>
