--- a/secret.html
+++ b/secret.html
@@ -92,11 +92,11 @@
 
 
 
-  <script src="jquery-2.1.4.min.js"></script>
-  <script src="handlebars-v4.0.5.js"></script>
-  <script src="highlight.js"></script>
-  <script src="marked.min.js"></script>
-  <script src="secret.js"></script>
+  <script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/handlebars-v4.0.5.js"></script>
+  <script src="/js/highlight.js"></script>
+  <script src="/js/marked.min.js"></script>
+  <script src="/js/secret.js"></script>
 
 </body>
 
