--- a/stats.html
+++ b/stats.html
@@ -19,9 +19,8 @@
 
 
   </body>
-  <script type="text/javascript" src="jquery-2.1.4.min.js"></script>
-  <script src="handlebars-v4.0.5.js"></script>
-  <script type="text/javascript" src="marked.min.js"></script>
-  <!-- <script type="text/javascript" src="blog.js"></script> -->
-  <script type="text/javascript" src="stats.js"></script>
+  <script type="text/javascript" src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/handlebars-v4.0.5.js"></script>
+  <script type="text/javascript" src="/js/marked.min.js"></script>
+  <script type="text/javascript" src="/js/stats.js"></script>
 </html>
