found infinite for loop. corrected and fixed most major bugs

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> LumberBlog</title>
     <meta charset="utf-8"></meta>
     <link rel="stylesheet" type="text/css" href="/blog.css"></link>
-    <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+    <!-- <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'> -->
   </head>
 
   <body>
@@ -58,16 +58,16 @@
   <script type="text/javascript" src="/js/marked.min.js"></script>
   <script type="text/javascript" src="/js/html5sql.js"></script>
   <script type="text/javascript" src="/js/page.js"></script>
-  <script type="text/javascript" src="/js/webdb.js"></script>
+   <script type="text/javascript" src="/js/webdb.js"></script>
   <script type="text/javascript" src="/js/router.js"></script>
 
   <script type="text/javascript" src="/js/articleControler.js"></script>
   <script type="text/javascript" src="/js/aboutControler.js"></script>
   <script type="text/javascript" src="/js/router.js"></script>
   <script type="text/javascript" src="/js/blogObject.js"></script>
-  <script type="text/javascript" src="/js/stats.js"></script>
+  <!-- <script type="text/javascript" src="/js/stats.js"></script> -->
   <script type="text/javascript" src="/js/util.js"></script>
   <script type="text/javascript" src="/js/blog.js"></script>
-  
+
 
   </html>
