added files we needed to add

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div id="aboutDiv">
       <h1>About the Developer</h1>
       <p>Jake Herold is a bearded portland hipster with good taste in music, cigars, and whisky. He hates IPAs. Why would you make bitter swill thats clearly designed to poison your fellow man? </p>
+      <div id="gitAnchor"></div>
     </div>
 
 
