--- a/index.html
+++ b/index.html
@@ -54,19 +54,27 @@
 
   </body>
 
+
+<!-- Vendor Libraries -->
   <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
   <script src="/js/handlebars-v4.0.5.js"></script>
   <script type="text/javascript" src="/js/marked.min.js"></script>
   <script type="text/javascript" src="/js/html5sql.js"></script>
   <script type="text/javascript" src="/js/page.js"></script>
-   <script type="text/javascript" src="/js/webdb.js"></script>
-  <script type="text/javascript" src="/js/router.js"></script>
 
+  <!-- View -->
+
+  <!-- Model -->
+
+
+
+  <!-- Controler -->
+  <script type="text/javascript" src="/js/webdb.js"></script>
+  <script type="text/javascript" src="/js/router.js"></script>
   <script type="text/javascript" src="/js/articleControler.js"></script>
   <script type="text/javascript" src="/js/aboutControler.js"></script>
   <script type="text/javascript" src="/js/router.js"></script>
   <script type="text/javascript" src="/js/blogObject.js"></script>
-  <!-- <script type="text/javascript" src="/js/stats.js"></script> -->
   <script type="text/javascript" src="/js/util.js"></script>
   <script type="text/javascript" src="/js/blog.js"></script>
 
